Changed project name to follow folder name.

--- a/CISC191M3BeginningClasses/.project
+++ b/CISC191M3BeginningClasses/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CISC191BeginningClasses</name>
+	<name>CISC191M3BeginningClasses</name>
 	<comment></comment>
 	<projects>
 	</projects>
