--- a/CISC191MultiThreading/.project
+++ b/CISC191MultiThreading/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CISC191ThreadProducerConsumer</name>
+	<name>CISC191MultiThreading</name>
 	<comment></comment>
 	<projects>
 	</projects>
