Updated blur test.

--- a/CISC191ArrayChallengeMiddleDeveloper/.classpath
+++ b/CISC191ArrayChallengeMiddleDeveloper/.classpath
@@ -7,6 +7,6 @@
 	</classpathentry>
 	<classpathentry excluding="library/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="src/library"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/sol"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
