--- a/CISC191M4AdvancedClasses/.project
+++ b/CISC191M4AdvancedClasses/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CISC191ExtendingClasses</name>
+	<name>CISC191M4AdvancedClasses</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -15,3 +15,4 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 </projectDescription>
+
